SFDCProject/src/objects/Appointment_Type__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <picklist>
            <picklistValues>
                <fullName>1hr Field Service visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2hr Field Service visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4hr Field Service visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8hr Field Service visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Visit Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit Revisit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Field Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buffer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Duration__c</fullName>
        <label>Default Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Auditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_reps_for_appt__c</fullName>
        <label>Number of reps for appt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Appointment Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Type__c</columns>
        <columns>Group__c</columns>
        <columns>Default_Duration__c</columns>
        <columns>Number_of_reps_for_appt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATP-{00000}</displayFormat>
        <label>Appointment Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>